Add lmod version for clone

--- a/roles/lmod_db/tasks/main.yaml
+++ b/roles/lmod_db/tasks/main.yaml
@@ -28,6 +28,7 @@
   git:
     repo: https://github.com/TACC/Lmod.git
     dest: /tmp/lmod
+    version: "{{ lmod_version }}"
 
 - name: Copy module tracking folder
   copy:
