Update option for create db script

--- a/roles/lmod_db/tasks/main.yaml
+++ b/roles/lmod_db/tasks/main.yaml
@@ -75,7 +75,7 @@
     chdir: "{{ lmod_module_tracking_loc }}"
 
 - name: Setup database
-  command: ./createDB.py
+  command: ./createDB.py --dbname="{{ lmod_db }}"
   args:
     chdir: "{{ lmod_module_tracking_loc }}"
 
