--- a/roles/ood_user_reg_cloud/tasks/main.yml
+++ b/roles/ood_user_reg_cloud/tasks/main.yml
@@ -66,6 +66,11 @@
     src: user-reg_conf_shib.j2
     dest: "/opt/rh/httpd24/root/etc/httpd/conf.d/user-reg.conf"
 
+- name: Put wsgi file in place
+  template:
+    src: wsgi.j2
+    dest: "{{ user_register_app_path }}/wsgi.py"
+
 - name: Put gunicorn config file in place
   template:
     src: ini.j2
@@ -103,7 +108,6 @@
   systemd:
     name: httpd24-httpd
     enabled: yes
-
 
 - name: Start and enable flask app gunicorn service
   service:
