Ignore error if db already initialized

--- a/roles/lmod_db/tasks/main.yaml
+++ b/roles/lmod_db/tasks/main.yaml
@@ -83,6 +83,7 @@
   command: ./createDB.py --dbname="{{ lmod_db }}"
   args:
     chdir: "{{ lmod_module_tracking_loc }}"
+  ignore_errors: yes
 
 - name: Modify store db script
   lineinfile:
