changed ownership of self-reg-app directory from apache to root

--- a/roles/ood_user_reg_cloud/tasks/main.yml
+++ b/roles/ood_user_reg_cloud/tasks/main.yml
@@ -20,8 +20,8 @@
 - name: Change ownership of directory
   file:
     path: "{{ user_register_app_path }}"
-    owner: apache
-    group: apache
+    owner: root
+    group: root
     state: directory
     recurse: yes
 
