changed log directory access from aoache to RegUser_app_user

--- a/roles/ood_user_reg_cloud/tasks/main.yml
+++ b/roles/ood_user_reg_cloud/tasks/main.yml
@@ -46,9 +46,9 @@
 
 - name: Create log directory
   file:
-    path: "{{ user_register_app_path }}/log"
-    owner: apache
-    group: apache
+    path: "/var/log/{{ user_register_app }}"
+    owner: "{{ RegUser_app_user }}"
+    group: "{{ RegUser_app_user }}"
     state: directory
 
 - name: Copy Celery service template
