created __pycache__ dir for flask-app-user

--- a/roles/ood_user_reg_cloud/tasks/main.yml
+++ b/roles/ood_user_reg_cloud/tasks/main.yml
@@ -25,6 +25,20 @@
     state: directory
     recurse: yes
 
+- name: Create __pycache__ in app dir
+  file:
+    path: "{{ user_register_app_path }}/__pycache__"
+    owner: "{{ RegUser_app_user }}"
+    group: "{{ RegUser_app_user }}"
+    state: directory
+
+- name: Create  __pycache__ in app dir
+  file:
+    path: "{{ user_register_app_path }}/app/__pycache__"
+    owner: "{{ RegUser_app_user }}"
+    group: "{{ RegUser_app_user }}"
+    state: directory
+
 - name: Copy Self-Reg app variables file
   template:
     src: vars.j2
