Add lmod db to ohpc.yaml (#81)
* Update option for create db script

* Add lmod db role in ohpc.yaml

* Update rsyslog file name for lmod user

* Update log filename as variable

* Split log file path into dir and filename

* Replace the line for syshost

* Copy analyze db script to share location

* Allow db user to access from remote

* Add lmod shared location as variable

* Update task to create folders

--- a/ohpc.yaml
+++ b/ohpc.yaml
@@ -4,6 +4,7 @@
     - { name: 'pre_ohpc', tags: 'pre_ohpc' }
     - { name: 'ohpc_install', tags: 'ohpc_install' }
     - { name: 'ohpc_config', tags: 'ohpc_config' }
+    - { name: 'lmod_db', tags: 'lmod_db' }
     - { name: 'compute_build_vnfs', tags: 'compute_build_vnfs' }
     - { name: 'compute_build_nodes', tags: 'compute_build_nodes' }
     - { name: 'nodes_vivify', tags: 'nodes_vivify' }
