--- a/cod.yaml
+++ b/cod.yaml
@@ -1,4 +1,5 @@
 ---
 - hosts: headnode
   roles:
+    - { name: 'cod_module', tags: 'cod_module' }
     - { name: 'cod_login_node', tags: 'cod_login_node' }
