added marker block to avoid re-write with #auth

--- a/roles/ood_enable_ssl/tasks/main.yml
+++ b/roles/ood_enable_ssl/tasks/main.yml
@@ -3,6 +3,7 @@
     path: /etc/ood/config/ood_portal.yml
     insertbefore: "#ssl:"
     backup: yes
+    marker: "# {mark} ANSIBLE MANAGED BLOCK ssl"
     block: |
       ssl:
         - 'SSLCertificateFile "/etc/pki/tls/certs/localhost.crt"'
