Added bits to install Open OnDemand.
Templates and config files for OnDemand, as well as changes to group_vars/all and headnode.yml.
Reflects work from May 2021 to March 2022.

Signed-off-by: AriannaMartin <martinar4@student.swosu.edu>

--- a/headnode.yml
+++ b/headnode.yml
@@ -12,4 +12,4 @@
    - {role: gpu_build_nodes, tags: gpu_build_nodes}
    - {role: login_build_nodes, tags: login_build_nodes}
    - {role: viz_build_nodes, tags: viz_build_nodes}
-   - {role: nodes_vivify, tags: nodes_vivify}
+   - {role: ood_install, tags: ood_install} 
