--- a/roles/compute_build_vnfs/tasks/main.yml
+++ b/roles/compute_build_vnfs/tasks/main.yml
@@ -64,6 +64,75 @@
        state: present
        installroot: "{{ compute_chroot_loc }}"
 
+   - block:
+
+     - name: Add TurboVNC repo
+       get_url:
+         url: https://turbovnc.org/pmwiki/uploads/Downloads/TurboVNC.repo
+         dest: /etc/yum.repos.d/
+         mode: '0644'
+         owner: root
+         group: root
+
+     - name: dnf groupinstall Xfce
+       command: dnf --installroot={{ compute_chroot_loc }} -y groupinstall Xfce
+       
+       #     - name: dnf groupinstall X Window system
+       #       command: dnf --installroot={{ compute_chroot_loc }} -y groupinstall "X Window system" 
+       
+     - name: dnf install into the image chroot
+       dnf:
+         name: "{{ ood_packages }}"
+         installroot: "{{ compute_chroot_loc }}"
+       vars:
+         ood_packages:
+           - "turbovnc"
+           - "netcat"
+           - "python39" # Edited this to 3.9 for websockify dependency!
+           - "xorg-x11-fonts-misc"
+           - "xorg-x11-server-Xorg"
+           - "xorg-x11-server-utils"
+           - "xorg-x11-xinit-session"
+           - "xorg-x11-utils"
+           - "xorg-x11-xauth"
+           - "xorg-x11-drivers"
+           - "xorg-x11-xbitmaps"
+           - "xorg-x11-xkb-utils"
+           - "git"
+           - "vim"
+           - "firefox"
+           - "nano"
+           - "nodejs"
+             # - "python-websockify"
+             #
+             #
+     - name: create websockify build dir
+       file:
+         state: directory
+         path: "{{ compute_chroot_loc }}/tmp/build"
+
+     - name: get websockify source
+       unarchive:
+         src: https://github.com/novnc/websockify/archive/refs/tags/v0.10.0.tar.gz
+         dest: "{{ compute_chroot_loc }}/tmp/build/"
+         remote_src: yes
+
+     - name: install websockify via system python3.9
+       command: chroot '{{ compute_chroot_loc }}' /bin/bash -c "cd /tmp/build/websockify-0.10.0; python3.9 setup.py install"
+       # Command inside of a chroot is tricky! the chdir doesn't work, because it happens BEFORE the command is called
+       # which results, of course, in failure. Thus, a nested two-part command sent to /bin/bash inside the chroot env...
+       #       args:
+       #         chdir: "{{ compute_chroot_loc }}/tmp/build/websockify-0.10.0/"
+       #
+     - name: install jupyterlab via system python3.9
+       command: chroot '{{ compute_chroot_loc }}' /bin/bash -c "python3.9 -m pip install jupyterlab"
+
+     - name: disable firewalld
+       command: chroot '{{ compute_chroot_loc }}' systemctl disable firewalld
+
+     when: ood_install == true
+
+       #               "lmod-ohpc",
    - name: copy ssh keys over
      copy: src=cluster_root.pub dest={{ compute_chroot_loc }}/root/.ssh/authorized_keys
 
