Feat cod nodes (#285)
* Add role to rebuild a new compute node on cod.

* Add role that rebuilds compute node with new chroot

* Add vars for compute chroot

* Remove comment out block

* Make compute node slurm client

* Use proper ansible module

* Add software needed for HPC Desktop

* Remove unused tasks

* Replace chroot location with variable

* Unmount folder after ansible finish

* Update host regex for compute nodes

* Remove compute role assginment

* Change the way set up slurm client

* Update task name

* Change the way set up slurm submit

* Fix linting issue

[201] Trailing whitespace
[206] Variables should have spaces before and after: {{ var_name }}
[301] Commands should not change things if nothing needs doing

* Update login node prefix

* Add node format variable

* Support multi compute node

* Support multi login node

* Append compute nodes to defq queue

* Add workload manager cluster for login

Co-authored-by: Eesaan Atluri <eesaanatluri@gmail.com>

--- a/cod.yaml
+++ b/cod.yaml
@@ -3,3 +3,4 @@
   roles:
     - { name: 'cod_module', tags: 'cod_module' }
     - { name: 'cod_login_node', tags: 'cod_login_node' }
+    - { name: 'cod_compute_node', tags: 'cod_compute_node' }
