Feat user state (#293)
* Add valid user state in group_vars

* Add valid user state in rabbit config template

* Add new user auth script

* Update task with new auth script

* Remove old auth script

* Make user auth script a template

* Remove executable permission from template

* Add urldecode function

* Add regex in user_auth

* Do urldecode on argument

* Use regex to extract username

* Update user auth template

user_auth.py has been move to top level in rabbitmq folder
so modify the template to match the path

* Make user auth regex a variable

* Add comment for ood_user_regex

--- a/roles/ood_user_reg_cloud/tasks/main.yml
+++ b/roles/ood_user_reg_cloud/tasks/main.yml
@@ -114,14 +114,14 @@
     replace: '{{ item.replace }}'
     backup: yes
   with_items:
-      - { regexp: "^#?(user_map_cmd:).*", replace: "\\1 '/opt/ood/ood_auth_map/bin/uab_ood_auth.regex'" }
+      - { regexp: "^#?(user_map_cmd:).*", replace: "\\1 '/opt/ood/ood_auth_map/bin/user_auth'" }
       - { regexp: "^#?(map_fail_uri:).*", replace: "\\1 '/register'" }
       - { regexp: "^#?(register_uri:).*", replace: "\\1 '/register'" }
 
 - name: Stage regex file for ood
-  copy:
-    src: uab_ood_auth.regex
-    dest: /opt/ood/ood_auth_map/bin/uab_ood_auth.regex
+  template:
+    src: user_auth.j2
+    dest: /opt/ood/ood_auth_map/bin/user_auth
     owner: root
     group: root
     mode: 0755
