--- a/ood-build.yaml
+++ b/ood-build.yaml
@@ -12,6 +12,6 @@
     - { name: 'ood_firewall_and_services', tags: 'ood_firewall_and_services' }
     - { name: 'ohpc_firewall_and_services', tags: 'ohpc_firewall_and_services' }
     - { name: 'ood_shib_install', tags: 'ood_shib_install', when: install_shib }
-    - { name: 'ood_shib', tags: 'ood_shib', when: configure_shib }
+    - { name: 'ood_shib_config', tags: 'ood_shib_config', when: configure_shib }
     - { name: 'ood_user_reg_cloud', tags: 'ood_user_reg_cloud' }
     - { name: 'ood_add_rabbitmq_agents', tags: 'ood_add_rabbitmq_agents', when: enable_user_reg }
