Feat-configure shibboleth to work with the self reg app
1. put the apache file to get shibboleth attributes
2. added value eppa_key to vars.py
3. renamed old conditional variables with the new ones

--- a/roles/ood_user_reg_cloud/tasks/main.yml
+++ b/roles/ood_user_reg_cloud/tasks/main.yml
@@ -80,17 +80,17 @@
     name: celery.service
     enabled: yes
 
-- name: Put apache config file in place (user-reg_conf_shib.j2 in case of shib or user-reg_conf.j2 in case of basicauth)
+- name: Put apache config file in place (user-reg_conf_shib.j2 in case of shib) 
   template:
     src: user-reg_conf_shib.j2
     dest: "/opt/rh/httpd24/root/etc/httpd/conf.d/user-reg.conf"
-  when: enable_shib
+  when: configure_shib 
 
-- name: Put apache config file in place (user-reg_conf_shib.j2 in case of shib or user-reg_conf.j2 in case of basicauth)
+- name: Put apache config file in place (user-reg_conf.j2 in case of basicauth)
   template:
     src: user-reg_conf.j2
     dest: "/opt/rh/httpd24/root/etc/httpd/conf.d/user-reg.conf"
-  when: not enable_shib
+  when: not configure_shib
 
 - name: Put wsgi file in place
   template:
