--- a/roles/cod_login_node/tasks/main.yml
+++ b/roles/cod_login_node/tasks/main.yml
@@ -100,6 +100,7 @@
   template:
     src: PostAddUserScript.j2
     dest: "/root/bin/{{ post_create_script }}"
+    mode: 0755
 
 - name: Update cmd.conf for post creation script
   replace:
