added remote_src set to yes

--- a/roles/ood_shib_config/tasks/main.yaml
+++ b/roles/ood_shib_config/tasks/main.yaml
@@ -23,6 +23,7 @@
   unarchive:
     src: "/tmp/{{ s3_shibboleth_object_name }}"
     dest: /
+    remote_src: yes
 
 - name: Recursively change ownership of a /etc/shibboleth to root
   ansible.builtin.file:
