--- a/roles/ood_user_reg_cloud/tasks/main.yml
+++ b/roles/ood_user_reg_cloud/tasks/main.yml
@@ -15,6 +15,7 @@
   git:
     repo: "{{ user_register_app_repo }}"
     dest: "{{ user_register_app_path }}"
+    refspec: "{{ user_register_app_refspec }}"
     version: "{{ user_register_app_tag }}"
 
 - name: Change ownership of directory
