--- a/roles/ood_add_rabbitmq_agents/tasks/main.yaml
+++ b/roles/ood_add_rabbitmq_agents/tasks/main.yaml
@@ -3,6 +3,7 @@
   git: 
     repo: "{{ rabbitmq_agents_repo }}"
     dest: "{{ rabbitmq_agents_loc }}"
+    refspec: "{{ rabbitmq_agents_refspec }}"
     version: "{{ rabbitmq_agents_version }}"
 
 - name: Install rabbitmq agents config file
