--- a/roles/ood_add_rstudio/tasks/main.yaml
+++ b/roles/ood_add_rstudio/tasks/main.yaml
@@ -1,10 +1,11 @@
 ---
 - name: Clone template repo from upstream
   git:
-    repo: 'https://github.com/rtripath89/bc_osc_rstudio_server.git'
+    repo: "{{ rstudio_ood_app_repo }}"
     dest: '/var/www/ood/apps/sys/bc_rstudio_server'
+    refspec: "{{ rstudio_ood_app_refspec }}"
     force: yes
-    version: 0.6.0
+    version: "{{ rstudio_ood_app_version }}"
 
 - name: Replace form.yml
   template:
