Add refspec and version to ood_user_reg

--- a/roles/ood_user_reg/tasks/main.yml
+++ b/roles/ood_user_reg/tasks/main.yml
@@ -27,6 +27,8 @@
   git:
     repo: "{{ user_register_app_repo }}"
     dest: "{{ user_register_app_path }}"
+    refspec: "{{ user_register_app_refspec }}"
+    version: "{{ user_register_app_tag }}"
 
 - name: Install requirements in virtualenv
   pip:
