--- a/roles/ood_matlab/tasks/main.yaml
+++ b/roles/ood_matlab/tasks/main.yaml
@@ -9,9 +9,10 @@
     state: directory
 
 - git:
-    repo: 'https://github.com/OSC/bc_osc_matlab.git'
+    repo: "{{ matlab_ood_app_repo }}"
     dest: /var/www/ood/apps/sys/matlab/
-    clone: yes
+    refspec: "{{ matlab_ood_app_refspec }}"
+    version: "{{ matlab_ood_app_version }}"
 
 - name: Replace form.yml
   template:
