--- a/roles/ood_sas/tasks/main.yaml
+++ b/roles/ood_sas/tasks/main.yaml
@@ -9,9 +9,10 @@
     state: directory
 
 - git:
-    repo: 'https://github.com/uabrc/ood_sas.git'
+    repo: "{{ sas_ood_app_repo }}"
     dest: /var/www/ood/apps/sys/sas/
-    clone: yes
+    refspec: "{{ sas_ood_app_refspec }}"
+    version: "{{ sas_ood_app_version }}"
 
 - name: Replace form.yml
   template:
