Update lmod db task with variables

--- a/roles/lmod_db/tasks/main.yaml
+++ b/roles/lmod_db/tasks/main.yaml
@@ -26,8 +26,9 @@
 
 - name: Clone Lmod repo
   git:
-    repo: https://github.com/TACC/Lmod.git
+    repo: "{{ lmod_repo }}"
     dest: /tmp/lmod
+    refspec: "{{ lmod_refspec }}"
     version: "{{ lmod_version }}"
 
 - name: Copy module tracking folder
