--- a/roles/ood_matlab/tasks/main.yaml
+++ b/roles/ood_matlab/tasks/main.yaml
@@ -8,7 +8,8 @@
     path: /var/www/ood/apps/sys/matlab
     state: directory
 
-- git:
+- name: Clone ood matlab app
+  git:
     repo: "{{ matlab_ood_app_repo }}"
     dest: /var/www/ood/apps/sys/matlab/
     refspec: "{{ matlab_ood_app_refspec }}"
@@ -31,5 +32,5 @@
 
 - name: Replace form script template
   copy:
-    src: script.sh.erb 
-    dest: /var/www/ood/apps/sys/matlab/template/script.sh.erb 
+    src: script.sh.erb
+    dest: /var/www/ood/apps/sys/matlab/template/script.sh.erb
