--- a/roles/ood_user_reg/tasks/main.yml
+++ b/roles/ood_user_reg/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Enable Copr Repos
   shell: yum -y copr enable "{{ item.repo_name }}"
   with_items: "{{ copr_repos }}"
-  when: enable_copr == true and inventory_hostname in item.host
+  when: enable_copr and inventory_hostname in item.host
 
 - name: Install mod_wsgi for httpd24
   yum: name="{{ mod_wsgi_pkg_name }}" state=latest
@@ -44,7 +44,7 @@
 - name: Put wsgi config file in place
   template:
     src: wsgi.j2
-    dest: "{{ user_register_app_path }}/{{ user_register_app}}.wsgi"
+    dest: "{{ user_register_app_path }}/{{ user_register_app }}.wsgi"
 
 - name: Enable user registration redirect
   replace:
@@ -70,7 +70,7 @@
   ignore_errors: yes
 
 - name: Get UID and GID of RegUser from OHPC
-  stat: 
+  stat:
      path: /home/{{ RegUser_app_user }}
   register: RegUser_stat
 
