--- a/roles/cod_rabbitmq_agents_cloud/tasks/main.yaml
+++ b/roles/cod_rabbitmq_agents_cloud/tasks/main.yaml
@@ -27,7 +27,6 @@
 - name: Set Accountingstorage enforce to limits
   lineinfile:
     path: "{{ slurm_conf_path }}"
-    #regexp: '^# AccountingStoragePass'
     insertafter: '^#\sAccountingStoragePass'
     line: "AccountingStorageEnforce=limits"
 
@@ -35,3 +34,12 @@
   service:
     name: slurmctld
     state: restarted
+
+- name: Create nossh group
+  command: module load cmsh && cmsh -c "group; add nossh; commit"
+
+- name: Add nossh group to denygroups
+  lineinfile:
+    path: /etc/ssh/sshd_config
+    insertafter: "^#MaxSessions"
+    line: "DenyGroups nossh"
