--- a/roles/ood_user_reg_cloud/tasks/main.yml
+++ b/roles/ood_user_reg_cloud/tasks/main.yml
@@ -116,8 +116,8 @@
     backup: yes
   with_items:
       - { regexp: "^#?(user_map_cmd:).*", replace: "\\1 '/opt/ood/ood_auth_map/bin/user_auth.py'" }
-      - { regexp: "^#?(map_fail_uri:).*", replace: "\\1 '/register'" }
-      - { regexp: "^#?(register_uri:).*", replace: "\\1 '/register'" }
+      - { regexp: "^#?(map_fail_uri:).*", replace: "\\1 '{{ user_register_app_url }}'" }
+      - { regexp: "^#?(register_uri:).*", replace: "\\1 '{{ user_register_app_url }}'" }
 
 - name: Stage regex file for ood
   template:
