--- a/roles/ood_user_reg/tasks/main.yml
+++ b/roles/ood_user_reg/tasks/main.yml
@@ -54,8 +54,8 @@
     backup: yes
   with_items:
       - { regexp: "^#?(user_map_cmd:).*", replace: "\\1 '/opt/ood/ood_auth_map/bin/uab_ood_auth.regex'" }
-      - { regexp: "^#?(map_fail_uri:).*", replace: "\\1 '/register'" }
-      - { regexp: "^#?(register_uri:).*", replace: "\\1 '/register'" }
+      - { regexp: "^#?(map_fail_uri:).*", replace: "\\1 '/{{ user_register_app }}'" }
+      - { regexp: "^#?(register_uri:).*", replace: "\\1 '/{{ user_register_app }}'" }
 
 - name: Stage regex file for ood
   copy:
