Update roles with new variable

--- a/roles/ood_user_reg_cloud/tasks/main.yml
+++ b/roles/ood_user_reg_cloud/tasks/main.yml
@@ -118,6 +118,7 @@
       - { regexp: "^#?(user_map_cmd:).*", replace: "\\1 '/opt/ood/ood_auth_map/bin/user_auth.py'" }
       - { regexp: "^#?(map_fail_uri:).*", replace: "\\1 '/{{ user_register_app }}'" }
       - { regexp: "^#?(register_uri:).*", replace: "\\1 '/{{ user_register_app }}'" }
+  when: activate_namespace
 
 - name: Stage regex file for ood
   template:
