--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 retry_files_enabled = False
 inventory = ./inventory/headnode
+interpreter_python=/usr/bin/python3.6
 
 [ssh_connection]
 control_path = ~/.ssh/ansible-%%r@%%h:%%p
