Add check to see if group names are empty.

--- a/roles/ohpc_add_groups/tasks/main.yaml
+++ b/roles/ohpc_add_groups/tasks/main.yaml
@@ -2,3 +2,4 @@
 - name: Create groups
   command: /cm/local/apps/cmd/bin/cmsh -c "group; add {{ item.name }}; commit"
   loop: "{{ ssh_groups }}"
+  when: item.name | length > 0
