--- a/roles/ood_ansys/tasks/main.yaml
+++ b/roles/ood_ansys/tasks/main.yaml
@@ -13,18 +13,4 @@
     repo: "{{ ansys_ood_repo }}"
     dest: "{{ ansys_ood_app_dir }}"
     clone: yes
-
-- name: Replace form.yml
-  template:
-    src: form.yml.j2
-    dest: "{{ ansys_ood_app_dir }}/form.yml"
-
-- name: Replace submission template
-  template:
-    src: submit.yml.erb.j2
-    dest: "{{ ansys_ood_app_dir }}/submit.yml.erb"
-
-- name: Remove form.js
-  file:
-    path: "{{ ansys_ood_app_dir }}/form.js"
-    state: absent
+    version: "{{ ansys_ood_app_version }}" 
