--- a/roles/ood_add_rstudio/tasks/main.yaml
+++ b/roles/ood_add_rstudio/tasks/main.yaml
@@ -2,23 +2,7 @@
 - name: Clone template repo from upstream
   git:
     repo: "{{ rstudio_ood_app_repo }}"
-    dest: '/var/www/ood/apps/sys/bc_rstudio_server'
+    dest: "{{ ood_sys_apps_dir }}/bc_rstudio_server"
     refspec: "{{ rstudio_ood_app_refspec }}"
     force: yes
     version: "{{ rstudio_ood_app_version }}"
-
-- name: Replace form.yml
-  template:
-    src: form.yml
-    dest: /var/www/ood/apps/sys/bc_rstudio_server/form.yml
-
-- name: Replace form submission template
-  copy:
-    src: submit.yml
-    dest: /var/www/ood/apps/sys/bc_rstudio_server/submit.yml.erb
-
-- name: Replace manifest file
-  copy:
-    src: manifest.yml
-    dest: /var/www/ood/apps/sys/bc_rstudio_server/manifest.yml
-
