--- a/ood-cod.yaml
+++ b/ood-cod.yaml
@@ -2,6 +2,7 @@
 - hosts: chroot
   roles:
     - { name: 'ood', tags: 'ood' }
+    - { name: 'ood_fix_cache', tags: 'ood_fix_cache' }
     - { name: 'ood_enable_ssl', tags: 'ood_enable_ssl' }
     - { name: 'ood_jupyter', tags: 'ood_jupyter', when: jupyter_provision}
     - { name: 'ood_vnc_form', tags: 'ood_vnc_form' }
