--- a/ood.yaml
+++ b/ood.yaml
@@ -5,6 +5,7 @@
     - { name: 'ood', tags: 'ood' }
     - { name: 'warewulf_sync', tags: 'warewulf_sync' }
     - { name: 'ood_jupyter', tags: 'ood_jupyter', when: jupyter_provision}
+    - { name: 'ood_jupyterlab', tags: 'ood_jupyterlab', when: jupyterlab_provision }
     - { name: 'ood_vnc_form', tags: 'ood_vnc_form' }
     - { name: 'ood_add_rstudio', tags: 'ood_add_rstudio', when: rstudio_provision }
     - { name: 'ood_matlab', tags: 'ood_matlab', when: matlab_provision }
