Properly name the template

--- a/roles/enable_lmod/tasks/main.yaml
+++ b/roles/enable_lmod/tasks/main.yaml
@@ -18,8 +18,8 @@
     - { path: 'cm-lmod-init.csh', regexp: 'LMOD.*$', replace: 'LMOD "1"'}
 
 - name: Put DefaultModules in place
-  copy:
-    src: DefaultModules.lua
+  template:
+    src: DefaultModules.lua.j2
     dest: "{{ item }}"
   loop:
     - "/usr/share/modulefiles"
