--- a/roles/enable_lmod/tasks/main.yaml
+++ b/roles/enable_lmod/tasks/main.yaml
@@ -20,7 +20,7 @@
 - name: Put DefaultModules in place
   template:
     src: DefaultModules.lua.j2
-    dest: "{{ item }}"
+    dest: "{{ item }}/DefaultModules.lua"
   loop:
     - "/usr/share/modulefiles"
     - "{{ cm_def_img_path }}/usr/share/modulefiles"
