Remove repeat code in enable_lmod

--- a/roles/enable_lmod/tasks/main.yaml
+++ b/roles/enable_lmod/tasks/main.yaml
@@ -1,16 +1,7 @@
 ---
-- name: Enable Lmod on Master node
+- name: Enable Lmod
   replace:
-    path: "/etc/sysconfig/modules/lmod/{{ item.path }}"
-    regexp: "{{ item.regexp }}"
-    replace: "{{ item.replace }}"
-  loop:
-    - { path: 'cm-lmod-init.sh', regexp: 'LMOD=.*$', replace: 'LMOD=1'}
-    - { path: 'cm-lmod-init.csh', regexp: 'LMOD.*$', replace: 'LMOD "1"'}
-
-- name: Enable Lmod in image
-  replace:
-    path: "{{ cm_def_img_path }}/etc/sysconfig/modules/lmod/{{ item.path }}"
+    path: "{{ enable_lmod_base }}/etc/sysconfig/modules/lmod/{{ item.path }}"
     regexp: "{{ item.regexp }}"
     replace: "{{ item.replace }}"
   loop:
@@ -22,5 +13,4 @@
     src: DefaultModules.lua.j2
     dest: "{{ item }}/DefaultModules.lua"
   loop:
-    - "/usr/share/modulefiles"
-    - "{{ cm_def_img_path }}/usr/share/modulefiles"
+    - "{{ enable_lmod_base }}/usr/share/modulefiles"
