--- a/cod.yaml
+++ b/cod.yaml
@@ -1,6 +1,7 @@
 ---
 - hosts: headnode
   roles:
-    - { name: 'cod_module', tags: 'cod_module' }
+    - { name: 'enable_lmod', tags: 'enable_lmod' }
+    - { name: 'enable_lmod', tags: 'enable_lmod_image', vars: [{ enable_lmod_base: "{{ cm_def_img_path }}" }] }
     - { name: 'cod_login_node', tags: 'cod_login_node' }
     - { name: 'cod_compute_node', tags: 'cod_compute_node' }
