--- a/roles/ood_enable_ssl/tasks/main.yml
+++ b/roles/ood_enable_ssl/tasks/main.yml
@@ -42,6 +42,16 @@
         - 'SSLCertificateChainFile "/etc/pki/tls/certs/{{ ood_ssl_cert_chain_file }}"'
   when: ood_ssl_cert_chain_file
 
+- name: Enhanced SSL config
+  ansible.builtin.set_fact:
+    ood_ssl_config: |-
+      {{ ood_ssl_config }}
+        - 'SSLProtocol -all +TLSv1.2'
+        - 'SSLHonorCipherOrder On'
+        - 'SSLCipherSuite  DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256'
+        - 'ServerSignature Off'
+        - 'TraceEnable Off'
+
 - name: enable ssl
   blockinfile:
     path: /etc/ood/config/ood_portal.yml
