Use different setting when cert chain file is set

--- a/roles/ood_enable_ssl/tasks/main.yml
+++ b/roles/ood_enable_ssl/tasks/main.yml
@@ -8,6 +8,20 @@
       ssl:
         - 'SSLCertificateFile "/etc/pki/tls/certs/{{ ood_ssl_cert_file }}"'
         - 'SSLCertificateKeyFile "/etc/pki/tls/private/{{ ood_ssl_cert_key }}"'
+  when: not ood_ssl_cert_chain_file
+
+- name: enable ssl with chain
+  blockinfile:
+    path: /etc/ood/config/ood_portal.yml
+    insertbefore: "#ssl:"
+    backup: yes
+    marker: "# {mark} ANSIBLE MANAGED BLOCK ssl"
+    block: |
+      ssl:
+        - 'SSLCertificateFile "/etc/pki/tls/certs/{{ ood_ssl_cert_file }}"'
+        - 'SSLCertificateKeyFile "/etc/pki/tls/private/{{ ood_ssl_cert_key }}"'
+        - 'SSLCertificateChainFile "/etc/pki/tls/certs/{{ ood_ssl_cert_chain_file }}"'
+  when: ood_ssl_cert_chain_file
 
 - name: Build the updated Apache config
   command: /opt/ood/ood-portal-generator/sbin/update_ood_portal
