--- a/cod.yaml
+++ b/cod.yaml
@@ -2,6 +2,6 @@
 - hosts: headnode
   roles:
     - { name: 'enable_lmod', tags: 'enable_lmod' }
-    - { name: 'enable_lmod', tags: 'enable_lmod_image', vars: [{ enable_lmod_base: "{{ cm_def_img_path }}" }] }
+    - { name: 'enable_lmod', tags: 'enable_lmod_image', vars: [{ enable_lmod_prefix: "{{ cm_def_img_path }}" }] }
     - { name: 'cod_login_node', tags: 'cod_login_node' }
     - { name: 'cod_compute_node', tags: 'cod_compute_node' }
